//
//  Transaltions.swift
//  Project Tiny Url
//
//  Created by Kurs on 12/08/2021.
//

import Foundation

class Translations {
    static let labelText = NSLocalizedString("Enter URL:", comment: "")
    static let buttonText = NSLocalizedString("Make it Tiny!", comment: "")
    static let alertTitle = NSLocalizedString("Success!", comment: "")
    static let alertMessage = NSLocalizedString("Tiny URL copied to clipboard!", comment: "")
    static let alertDismiss = NSLocalizedString("Swipe to dismiss", comment: "")
    static let alertWrongURL = NSLocalizedString("URL syntax invalid", comment: "")
    static let alertDoneIt = NSLocalizedString("You shorted this URL  before", comment: "")
}
