...
        stackView.axis = .vertical
        return stackView
    }()

    private let textField: UITextField = {
        let textField = UITextField()
        textField.placeholder = "URL"
        textField.backgroundColor = .white
        textField.borderStyle = .roundedRect
        return textField
    }()

    private let enterURLLabel: UILabel = {
...
